# fleetOS

./: .gitattributes  .gitignore  BUILD_LOG.md  CLAUDE.md  README.md
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  Kconfig.projbuild  main.c  mqtt.c  mqtt.h  ota.c  ota.h  wifi.c  wifi.h
host/: .env.example  fleetctl.py  requirements.txt
tools/: build.sh  release.sh
